<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- File operations -->
    <item
        android:id="@+id/menu_new"
        android:title="@string/menu_new"
        android:icon="@drawable/ic_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_import"
        android:title="@string/menu_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_json"
        android:title="@string/menu_export_json"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_export_svg"
        android:title="@string/menu_export_svg"
        app:showAsAction="never" />

    <item android:id="@+id/menu_divider_1"
        android:title=""
        android:enabled="false"
        app:showAsAction="never"/>

    <!-- Help — always visible in overflow -->
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:icon="@drawable/ic_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
